sbin_PROGRAMS = radioclkd2

radioclkd2_SOURCES = main.c memory.c logger.c \
	serial.c clock.c shm.c settings.c utctime.c \
        decode_msf.c decode_dcf77.c decode_wwvb.c \
	config.h memory.h logger.h systime.h \
	serial.h timef.h clock.h shm.h settings.h utctime.h \
	decode_msf.h decode_dcf77.h decode_wwvb.h

radioclkd2_LDADD = -lm



EXTRA_DIST = extras
 
